; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_ep0.c_cdns3_ep0_standard_request.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_ep0.c_cdns3_ep0_standard_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdns3_device = type { i32 }
%struct.usb_ctrlrequest = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdns3_device*, %struct.usb_ctrlrequest*)* @cdns3_ep0_standard_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cdns3_ep0_standard_request(%struct.cdns3_device* %0, %struct.usb_ctrlrequest* %1) #0 {
  %3 = alloca %struct.cdns3_device*, align 8
  %4 = alloca %struct.usb_ctrlrequest*, align 8
  %5 = alloca i32, align 4
  store %struct.cdns3_device* %0, %struct.cdns3_device** %3, align 8
  store %struct.usb_ctrlrequest* %1, %struct.usb_ctrlrequest** %4, align 8
  %6 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %7 = getelementptr inbounds %struct.usb_ctrlrequest, %struct.usb_ctrlrequest* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %37 [
    i32 132, label %9
    i32 131, label %13
    i32 133, label %17
    i32 134, label %21
    i32 130, label %25
    i32 128, label %29
    i32 129, label %33
  ]

9:                                                ; preds = %2
  %10 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %11 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %12 = call i32 @cdns3_req_ep0_set_address(%struct.cdns3_device* %10, %struct.usb_ctrlrequest* %11)
  store i32 %12, i32* %5, align 4
  br label %41

13:                                               ; preds = %2
  %14 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %15 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %16 = call i32 @cdns3_req_ep0_set_configuration(%struct.cdns3_device* %14, %struct.usb_ctrlrequest* %15)
  store i32 %16, i32* %5, align 4
  br label %41

17:                                               ; preds = %2
  %18 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %19 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %20 = call i32 @cdns3_req_ep0_get_status(%struct.cdns3_device* %18, %struct.usb_ctrlrequest* %19)
  store i32 %20, i32* %5, align 4
  br label %41

21:                                               ; preds = %2
  %22 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %23 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %24 = call i32 @cdns3_req_ep0_handle_feature(%struct.cdns3_device* %22, %struct.usb_ctrlrequest* %23, i32 0)
  store i32 %24, i32* %5, align 4
  br label %41

25:                                               ; preds = %2
  %26 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %27 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %28 = call i32 @cdns3_req_ep0_handle_feature(%struct.cdns3_device* %26, %struct.usb_ctrlrequest* %27, i32 1)
  store i32 %28, i32* %5, align 4
  br label %41

29:                                               ; preds = %2
  %30 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %31 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %32 = call i32 @cdns3_req_ep0_set_sel(%struct.cdns3_device* %30, %struct.usb_ctrlrequest* %31)
  store i32 %32, i32* %5, align 4
  br label %41

33:                                               ; preds = %2
  %34 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %35 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %36 = call i32 @cdns3_req_ep0_set_isoch_delay(%struct.cdns3_device* %34, %struct.usb_ctrlrequest* %35)
  store i32 %36, i32* %5, align 4
  br label %41

37:                                               ; preds = %2
  %38 = load %struct.cdns3_device*, %struct.cdns3_device** %3, align 8
  %39 = load %struct.usb_ctrlrequest*, %struct.usb_ctrlrequest** %4, align 8
  %40 = call i32 @cdns3_ep0_delegate_req(%struct.cdns3_device* %38, %struct.usb_ctrlrequest* %39)
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %37, %33, %29, %25, %21, %17, %13, %9
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i32 @cdns3_req_ep0_set_address(%struct.cdns3_device*, %struct.usb_ctrlrequest*) #1

declare dso_local i32 @cdns3_req_ep0_set_configuration(%struct.cdns3_device*, %struct.usb_ctrlrequest*) #1

declare dso_local i32 @cdns3_req_ep0_get_status(%struct.cdns3_device*, %struct.usb_ctrlrequest*) #1

declare dso_local i32 @cdns3_req_ep0_handle_feature(%struct.cdns3_device*, %struct.usb_ctrlrequest*, i32) #1

declare dso_local i32 @cdns3_req_ep0_set_sel(%struct.cdns3_device*, %struct.usb_ctrlrequest*) #1

declare dso_local i32 @cdns3_req_ep0_set_isoch_delay(%struct.cdns3_device*, %struct.usb_ctrlrequest*) #1

declare dso_local i32 @cdns3_ep0_delegate_req(%struct.cdns3_device*, %struct.usb_ctrlrequest*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
